k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-webhook
  namespace: payment-webhook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-service-webhook
  template:
    metadata:
      labels:
        app: payment-service-webhook
    spec:
      containers:
        - name: payment-service-webhook
          image: dammak/payment-service-webhook:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
